--- a/content-agent-system/package.json
+++ b/content-agent-system/package.json
@@ -20,6 +20,8 @@
     "@langchain/core": "1.1.17",
     "@langchain/google-genai": "^2.1.13",
     "@langchain/langgraph": "^0.2.41",
+    "@langchain/ollama": "^1.2.1",
+    "@langchain/openai": "^1.2.3",
     "axios": "^1.13.3",
     "cheerio": "^1.2.0",
     "dotenv": "^16.4.7",
