--- a/content-agent-system/package.json
+++ b/content-agent-system/package.json
@@ -25,10 +25,12 @@
     "axios": "^1.13.3",
     "cheerio": "^1.2.0",
     "dotenv": "^16.4.7",
+    "inquirer": "^8.2.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.35",
+    "@types/inquirer": "^9.0.9",
     "@types/node": "^22.10.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
