feat: Implement dynamic blog post detail page, update Next.js to 16.1.6, and adjust Next.js configuration.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.555.0",
-    "next": "16.0.10",
+    "next": "16.1.6",
     "next-mdx-remote": "^5.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -36,6 +36,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
+    "baseline-browser-mapping": "^2.9.19",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "eslint-plugin-mdx": "^3.6.2",
