chore: Pin Node.js version to 22 and specify pnpm as the package manager.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "programming-blog",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@10.5.2",
+  "engines": {
+    "node": ">=22"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
